--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,18 @@ poetry.toml
 
 # LSP config files
 pyrightconfig.json
+
+
+### JupyterNotebooks ###
+# gitignore template for Jupyter Notebooks
+# website: http://jupyter.org/
+
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Remove previous ipynb_checkpoints
+#   git rm -r .ipynb_checkpoints/
